gitops/manifests/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: qoves-app
  labels:
    app: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 8080
      targetPort: http
