gitops/manifests/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: qoves-app
  annotations:
    
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: qoves.local
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  name: http
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  name: http
